assets/css/main.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@100;200;300;400;500;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes fading {
  0% {
    background-color: #e93d58;
  }
  25% {
    background-color: #ef973c;
  }
  50% {
    background-color: #3daee9;
  }
  75% {
    background-color: #00d485;
  }
}

.btn {
  @apply px-3 py-2 rounded-sm outline-none
           transition duration-100
           bg-purple-600 hover:bg-purple-500
           ring-offset-dark-800 ring-purple-400
            transform text-center select-none;
}

.btn:hover {
  box-shadow: 0 1px 8px 1px black;
  transform: translateY(-0.05rem);
}

.btn:active {
  transform: translateY(0.1rem);
}

.btn:focus-visible,
.btn:active {
  box-shadow: 0 1px 4px 1px black;
}

.fading-bg {
  background-color: #ef973c;
  animation: 60s fading infinite;
  animation-direction: alternate;
}

.prose-wrapper {
  display: flex;
  flex-direction: row;
}

.prose-toc {
  @apply bg-dark-900 sticky top-0 left-0 h-[100vh] overflow-x-auto;
}

.prose-toc > nav > ul {
  @apply p-2;
}

.prose-toc ul > li > ul ~ a::before {
  content: "▾ ";
}

.prose-toc ul ul {
  @apply pl-3;
}

.prose-toc a {
  @apply transition-all duration-100 pl-4 py-2 rounded-md w-full hover:bg-dark-500 block;
}

.prose-toc h4 {
  @apply px-4 py-2 bg-dark-800;
}

@media (max-width: 800px) {
  .prose-toc {
    display: none;
  }
}

.prose a {
  text-decoration: underline;
}
.prose a:visited {
  color: #7655c8;
}
@media (prefers-color-scheme: dark) {
  .prose a:visited {
    color: #926ee4;
  }
  body {
    background-color: #202020;
  }
  header.header {
    background-color: #191919;
  }
}

.prose-toc {
  width: 40ch;
}

.prose {
  max-width: 80ch;
  width: 100%;
}

.prose {
  font-size: 1.125rem;
  @apply dark:text-gray-300;
}

.prose p,
.prose li {
  line-height: 170%;
}

.prose ul {
  margin: 0 0 1.875rem 1.5625rem;
}
.prose ul li {
  @apply list-disc;
}
.prose ol li {
  @apply list-decimal;
}

.prose code {
  color: #f8f8f2;
  background-color: #32332e;
  border-radius: 10px;
  padding: 4px;
  white-space: nowrap;
}

.prose pre {
  background-color: #32332e !important;
  border-radius: 10px;
  padding: 4px;
}

.prose pre > code {
  border-radius: 0;
  padding: 0;
  white-space: pre;
}

.prose h1 {
  font-weight: 800;
  margin-bottom: 1.25rem;
  margin-top: 2.6875rem;
  font-size: 2.25rem;
  line-height: 1.3;
  border-bottom: 1px solid #676862;

  @apply dark:text-white;
}
.prose h2 {
  font-size: 1.875rem;
  margin: 2.6875rem 0 0.9375rem 0;
  border-bottom: 1px solid #676862;

  @apply dark:text-white;
}
.prose h3 {
  font-weight: 600;
  font-size: 1.3125rem;
  margin: 1rem 0 0.5rem 0;

  @apply dark:text-white;
}
.prose h4,
.prose h5,
.prose h6 {
  margin: 0.75rem 0 0.35rem 0;

  @apply dark:text-white;
}
.prose td,
.prose th {
  @apply border;
  @apply border-gray-400;
  @apply px-4;
  @apply py-2;
}
.prose th {
  @apply font-bold;
}

